# adolc

./: .gitignore  ADOL-C-2.0.0.tgz.delta  ADOL-C-2.0.0.tgz.id  ADOL-C-2.1.0.tgz.delta  ADOL-C-2.1.0.tgz.id  Makefile.am  Makefile.in  Makefile.win  aclocal.m4  adolc_2.1.1.orig.tar.gz.delta  adolc_2.1.1.orig.tar.gz.id  adolc_2.1.10.orig.tar.gz.delta  adolc_2.1.10.orig.tar.gz.id  adolc_2.1.11.orig.tar.gz.delta  adolc_2.1.11.orig.tar.gz.id  adolc_2.1.12.orig.tar.gz.delta  adolc_2.1.12.orig.tar.gz.id  adolc_2.1.2.orig.tar.gz.delta  adolc_2.1.2.orig.tar.gz.id  adolc_2.1.3.orig.tar.gz.delta  adolc_2.1.3.orig.tar.gz.id  adolc_2.1.5.orig.tar.gz.delta  adolc_2.1.5.orig.tar.gz.id  adolc_2.1.6.orig.tar.gz.delta  adolc_2.1.6.orig.tar.gz.id  adolc_2.1.7.orig.tar.gz.delta  adolc_2.1.7.orig.tar.gz.id  adolc_2.1.8+nomsvcrt.orig.tar.gz.delta  adolc_2.1.8+nomsvcrt.orig.tar.gz.id  adolc_2.1.8.orig.tar.gz.delta  adolc_2.1.8.orig.tar.gz.id  adolc_2.1.9.orig.tar.gz.delta  adolc_2.1.9.orig.tar.gz.id  adolc_2.2.0.orig.tar.gz.delta  adolc_2.2.0.orig.tar.gz.id  adolc_2.2.1.orig.tar.gz.delta  adolc_2.2.1.orig.tar.gz.id  adolc_2.3.0.orig.tar.gz.delta  adolc_2.3.0.orig.tar.gz.id  adolc_2.4.0.orig.tar.gz.delta  (+21 more)
ADOL-C/: Makefile.in
ADOL-C/examples/: Makefile.am  Makefile.in  detexam.cpp  luexam.cpp  odexam.cpp  powexam.cpp  speelpenning.cpp  tapeless_scalar.cpp  tapeless_vector.cpp
ADOL-C/examples/additional_examples/: Makefile.am  Makefile.in
ADOL-C/examples/additional_examples/checkpointing/: Makefile.am  Makefile.in  checkpointing.cpp
ADOL-C/examples/additional_examples/clock/: Makefile.am  Makefile.in  myclock.cpp  myclock.h
ADOL-C/examples/additional_examples/cuda/: Makefile.am  liborgpu.cu  traceless_cuda.cu
ADOL-C/examples/additional_examples/detexam/: Makefile.am  Makefile.in  detexam-old.cpp  detexam.cpp
ADOL-C/examples/additional_examples/ext_diff_func/: Makefile.am  Makefile.in  ext_diff_func.cpp
ADOL-C/examples/additional_examples/fixpoint_exam/: Makefile.am  Makefile.in  fixpoint_exam.cpp
ADOL-C/examples/additional_examples/helm/: Makefile.am  Makefile.in  helm-auto-exam.cpp  helm-diff-exam.cpp
ADOL-C/examples/additional_examples/hessmat/: Makefile.am  Makefile.in  hessmat.cpp
ADOL-C/examples/additional_examples/ipopt/: README
ADOL-C/examples/additional_examples/lighthouse/: Makefile.am  Makefile.in  cubic-2.cpp  cubic-iter-2.cpp  cubic-iter.cpp  cubic.cpp
ADOL-C/examples/additional_examples/lufact/: LU.cpp  LU.h  LUdet.cpp  LUsolve.cpp  Makefile.am  Makefile.in
ADOL-C/examples/additional_examples/ode/: Makefile.am  Makefile.in  vfunc_eutroph.cpp  vfunc_fic.cpp  vfunc_robertson.cpp  vgenodemain.cpp
ADOL-C/examples/additional_examples/openmp_exam/: Makefile.am  Makefile.in  liborpar.cpp  liborser.cpp
ADOL-C/examples/additional_examples/pow/: Makefile.am  Makefile.in  powexam.cpp
ADOL-C/examples/additional_examples/scal/: Makefile.am  Makefile.in  scalexam.cpp
ADOL-C/examples/additional_examples/sparse/: Makefile.am  Makefile.in  jacpatexam.cpp  sparse_hessian.cpp  sparse_jacobian.cpp
ADOL-C/examples/additional_examples/speelpenning/: Makefile.am  Makefile.in  speelpenning.cpp
ADOL-C/examples/additional_examples/tapesave/: Makefile.am  Makefile.in  createTape.cpp  useTape.cpp
ADOL-C/examples/additional_examples/taylor/: Makefile.am  Makefile.in  accessexam.cpp  coordinates.cpp  inversexam.cpp  taylorexam.cpp  trigger.cpp
ADOL-C/examples/additional_examples/timing/: Makefile.am  Makefile.in  rotations.cpp  rotations.h  sfunc_determinant.cpp  sfunc_experimental.cpp  sfunc_griewank.cpp  sfunc_helmholtz.cpp  sfunc_michalewitz.cpp  sfunc_power.cpp  sfunc_rosenbrock.cpp  sfunc_speelpenning.cpp  sgenmain.cpp  vfunc_gear.cpp  vfunc_pargear.cpp  vfunc_shuttle.cpp  vfunc_simplevec.cpp  vgenmain.cpp
ADOL-C/include/adolc/: adouble.h  common.h  interfaces.h  taping.h
ADOL-C/include/adolc/internal/: usrparms.h
ADOL-C/src/: .gitignore  Makefile.am  Makefile.in  adalloc.c  adalloc.h  adolc.h  adolc_openmp.h  adolc_sparse.h  adouble.cpp  adouble.h  adutils.h  adutilsc.h  advector.cpp  buffer_temp.h  checkpointing.cpp  checkpointing.h  checkpointing_p.h  common.h  config.h.in  convolut.c  convolut.h  dvlparms.h  externfcts.cpp  externfcts.h  externfcts_p.h  fixpoint.cpp  fixpoint.h  fo_rev.c  fortutils.c  fortutils.h  forward_partx.c  fos_forward.c  fos_reverse.c  fov_forward.c  fov_offset_forward.c  fov_reverse.c  ho_rev.c  hos_forward.c  hos_ov_reverse.c  hos_reverse.c  (+31 more)
ADOL-C/src/drivers/: Makefile.am  Makefile.in  drivers.c  drivers.h  driversf.c  odedrivers.c  odedrivers.h  odedriversf.c  taylor.c  taylor.h
ADOL-C/src/sparse/: Makefile.am  Makefile.in  sparse_fo_rev.cpp  sparse_fo_rev.h  sparsedrivers.cpp  sparsedrivers.h
ADOL-C/src/tapedoc/: Makefile.am  Makefile.in  tapedoc.c  tapedoc.h
ADOL-C/test/: run_tests
debian/: .gitignore  changelog  clean  control  copyright  libadolc-dev.doc-base.adolc-20  libadolc-dev.doc-base.adolc-manual  libadolc-dev.doc-base.short-ref  libadolc-dev.docs  libadolc-dev.install  not-installed  rules  shlibs.local  watch
debian/patches/: 0001-automake-options.patch  0001-libdir-okay.patch  0001-spelling-errors-in-strings.patch  0002-automake-options.patch  0002-typos.patch  0003-correct-second-deriv-for-log.patch  0003-debash.patch  0003-printf-format.patch  0003-spelling.patch  series
debian/upstream/: metadata
