##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 623 2015-08-19 18:32:29Z kulshres $
##
## Copyright (C) Andrea Walther, Andreas Kowarz
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

noinst_LTLIBRARIES = libclock.la

libclock_la_SOURCES  = myclock.h myclock.cpp

MAINTAINERCLEANFILES = Makefile.in *~ *.orig
